# rtngs

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  app.py  pyproject.toml
backend/models/: reviews.py
frontend/: .gitignore  package.json
frontend/__tests__/src/: ReactApp.test.js  Review.test.js  Stars.test.js
frontend/__tests__/utils/: check-error-exist.test.js
frontend/src/: ReactApp.js  Review.js  Stars.js  app.js  index.html  index.js  styles.scss
frontend/utils/: check-error-exist.js  fetch-wrapper.js
