[project]
name = ""
version = ""
description = ""
authors = [
    {name = "utopictown", email = "ekoprstyo.mail@gmail.com"},
]
dependencies = [
    "Flask>=2.0.2",
    "flask-sqlalchemy>=2.5.1"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
